[editor Toolbar] Prevent canvas name being squashed out when width is narrow.

--- a/app/src/editor/components/Toolbar.pcss
+++ b/app/src/editor/components/Toolbar.pcss
@@ -39,3 +39,8 @@
 .CanvasToolbar .CanvasRename::selection {
   background: rgba(3, 36, 255, 0.1);
 }
+
+.CanvasToolbar .CanvasNameContainer,
+.CanvasToolbar .CanvasNameContainer .CanvasRename {
+  min-width: max-content; /* prevent canvas name being squashed out */
+}
